--- a/CatKeeper/app/src/main/res/values/colors.xml
+++ b/CatKeeper/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="paleGrey">#F0F0F0</color>
+    <color name="gray">#CCCCCC</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlueGreenTranslucent">#445cd6d6</color>
     <color name="colorBlueGreen">#5cd6d6</color>
