--- a/CatKeeper/app/src/main/res/values/dimens.xml
+++ b/CatKeeper/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="ui_size_180">180dp</dimen>
+    <dimen name="ui_size_200">200dp</dimen>
     <dimen name="ui_size_80">80dp</dimen>
     <dimen name="ui_size_32">32dp</dimen>
     <dimen name="ui_size_70">70dp</dimen>
@@ -12,10 +13,13 @@
     <dimen name="ui_size_36">36dp</dimen>
     <dimen name="ui_size_18">18dp</dimen>
     <dimen name="ui_size_25">25dp</dimen>
+    <dimen name="ui_size_22">22dp</dimen>
     <dimen name="ui_size_15">15dp</dimen>
+    <dimen name="ui_size_16">16dp</dimen>
     <dimen name="ui_size_6">6dp</dimen>
     <dimen name="ui_size_4">4dp</dimen>
     <dimen name="ui_size_10">10dp</dimen>
+    <dimen name="ui_size">12dp</dimen>
 
     <dimen name="text_size_30">30sp</dimen>
     <dimen name="text_size_22">22sp</dimen>
