--- a/CatKeeper/app/src/main/res/layout/activity_main.xml
+++ b/CatKeeper/app/src/main/res/layout/activity_main.xml
@@ -26,25 +26,25 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="@dimen/ui_size"
-                android:layout_height="@dimen/ui_size"
+                android:layout_width="@dimen/ui_size_6"
+                android:layout_height="@dimen/ui_size_6"
                 android:src="@drawable/dot_bg_green" />
 
             <ImageView
-                android:layout_width="@dimen/ui_size"
-                android:layout_height="@dimen/ui_size"
+                android:layout_width="@dimen/ui_size_6"
+                android:layout_height="@dimen/ui_size_6"
                 android:layout_marginStart="@dimen/ui_size_22"
                 android:src="@drawable/dot_bg_white" />
 
             <ImageView
-                android:layout_width="@dimen/ui_size"
-                android:layout_height="@dimen/ui_size"
+                android:layout_width="@dimen/ui_size_6"
+                android:layout_height="@dimen/ui_size_6"
                 android:layout_marginStart="@dimen/ui_size_22"
                 android:src="@drawable/dot_bg_white" />
 
             <ImageView
-                android:layout_width="@dimen/ui_size"
-                android:layout_height="@dimen/ui_size"
+                android:layout_width="@dimen/ui_size_6"
+                android:layout_height="@dimen/ui_size_6"
                 android:layout_marginStart="@dimen/ui_size_22"
                 android:src="@drawable/dot_bg_white" />
         </LinearLayout>
