--- a/CatKeeper/app/src/main/res/values/dimens.xml
+++ b/CatKeeper/app/src/main/res/values/dimens.xml
@@ -19,7 +19,7 @@
     <dimen name="ui_size_6">6dp</dimen>
     <dimen name="ui_size_4">4dp</dimen>
     <dimen name="ui_size_10">10dp</dimen>
-    <dimen name="ui_size">12dp</dimen>
+    <dimen name="ui_size_8">10dp</dimen>
 
     <dimen name="text_size_30">30sp</dimen>
     <dimen name="text_size_22">22sp</dimen>
