added detail page

--- a/CatKeeper/app/src/main/res/layout/fragment_fragment_my_cat.xml
+++ b/CatKeeper/app/src/main/res/layout/fragment_fragment_my_cat.xml
@@ -1,13 +1,22 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/colorWhite"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.tw.training.catkeeper.fragment.MyCatFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:textSize="@dimen/text_size_12"
+        android:gravity="center"
+        android:paddingBottom="@dimen/ui_size_50"
+        android:layout_centerInParent="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:text="@string/text_no_cat_reminder" />
 
-</FrameLayout>
+    <ImageView
+        android:src="@mipmap/cat_bg"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+</RelativeLayout>
