--- a/CatKeeper/app/src/main/res/layout/activity_main.xml
+++ b/CatKeeper/app/src/main/res/layout/activity_main.xml
@@ -85,5 +85,10 @@
             android:textColor="@drawable/tab_text_selector"
             android:textSize="@dimen/text_size_14" />
     </LinearLayout>
+    <FrameLayout
+        android:id="@+id/fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </FrameLayout>
 
 </LinearLayout>
