--- a/CatKeeper/app/src/main/res/layout/cat_item_layout.xml
+++ b/CatKeeper/app/src/main/res/layout/cat_item_layout.xml
@@ -17,20 +17,20 @@
             android:layout_width="27dp"
             android:layout_height="27dp"
             android:scaleType="fitXY"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/cat_avatar" />
 
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/avatar"
-            android:layout_alignTop="@+id/avatar"
             android:layout_marginLeft="@dimen/ui_size_15"
-            android:layout_toRightOf="@+id/avatar"
             android:gravity="center_vertical"
             android:text="Kitty"
             android:textSize="@dimen/text_size_14"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/avatar"
+            android:layout_marginStart="13dp" />
 
         <TextView
             android:id="@+id/timestamp"
@@ -46,11 +46,13 @@
 
         <TextView
             android:id="@+id/description"
+            android:textSize="@dimen/text_size_12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/name"
             android:layout_below="@+id/name"
             android:layout_marginTop="@dimen/ui_size_10"
+            android:layout_marginBottom="@dimen/ui_size_10"
             android:text="Finally I have my cat" />
 
         <ImageView
@@ -60,7 +62,7 @@
             android:layout_alignLeft="@+id/name"
             android:layout_below="@+id/description"
             android:scaleType="fitXY"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/cat_icon_1" />
 
         <ImageView
             android:id="@+id/image2"
@@ -70,7 +72,7 @@
             android:layout_marginLeft="@dimen/text_size_12"
             android:layout_toRightOf="@+id/image1"
             android:scaleType="fitXY"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/cat_icon_2" />
 
         <ImageView
             android:id="@+id/image3"
@@ -80,7 +82,7 @@
             android:layout_marginLeft="@dimen/text_size_12"
             android:layout_toRightOf="@+id/image2"
             android:scaleType="fitXY"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/cat_icon_3" />
 
 
     </RelativeLayout>
