--- a/CatKeeper/app/src/main/res/layout/activity_cat_detail.xml
+++ b/CatKeeper/app/src/main/res/layout/activity_cat_detail.xml
@@ -13,14 +13,14 @@
         android:scaleType="fitXY"
         android:src="@mipmap/cat_5" />
 
-    <com.tw.training.catkeeper.view.CircleImageView
+    <ImageView
         android:id="@+id/avatar"
         android:layout_width="@dimen/ui_size_106"
         android:layout_height="@dimen/ui_size_106"
-        android:layout_marginTop="199dp"
-        android:src="@mipmap/cat_avatar"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/background"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/ui_size_minus_53"
+        android:src="@mipmap/cat_avatar" />
 
     <TextView
         android:id="@+id/signature"
